[package]
name = "utmp-classic"
edition = "2021"
description = "Parsing login records in classic UNIXv1 type UTMP files; still used in OpenBSD"
keywords = ["utmp", "openbsd", "unix", "login"]
categories = ["os::unix-apis"]
authors = ["Jadi <jadijadi@gmail.com>"]
repository = "https://github.com/jadijadi/utmp-classic"
license = "MIT"
version = "0.1.0"

[[example]]
name = "dump-utmp"
path = "src/dump_utmp.rs"

[dependencies]
cfg-if = "1.0.0"
zerocopy = "0.6"
