[package]
name = "utmp-classic"
edition = "2021"
description = "Parsing login records in classic UNIXv1 type UTMP files; still used in OpenBSD"
keywords = ["utmp", "openbsd", "unix", "login"]
categories = ["os::unix-apis"]
authors = ["Jadi <jadijadi@gmail.com>"]
repository = "https://github.com/jadijadi/utmp-classic"
license = "MIT"
version = "0.1.5"
readme = "README.md"

[[example]]
name = "dump-utmp"
path = "examples/dump_utmp.rs"

[dependencies]
cfg-if = "1.0.0"
zerocopy = "0.6"
time = "0.3"
libc = "0.2.66"
utmp-classic-raw = { version = "0.1.2", path = "raw" }
thiserror = "1.0.10"


[workspace]
members = ["raw"]

[dev-dependencies]
anyhow = "1.0.26"
once_cell = "1.3.1"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu"]
